Mutable biome categories for stone circles